@@ -1,3 +1,8 @@
+Mon Oct 22 21:39:42 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: recognize uris on the command line
+	  and handle them correctly
+
 Mon Oct 22 19:38:03 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: whack the old gtk file selection stuff,
